topology/ingress-custom-domain.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab-hwservice-app
  namespace: master
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - myservice.jele.website
    secretName: external-domain-tls
  rules:
  - host: myservice.jele.website
    http:
      paths:
      - path: /helloworld
        backend:
          serviceName: hwservice
          servicePort: 8080
