topology/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-hwservice-app
  namespace: master
spec:
 template:
   annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
   spec:
     rules:
     - http:
         paths:
         - path: /helloworld(/|$)(.*)
           pathType: Prefix
           backend:
             service: 
               name: hwservice
               port: 
                 number: 8080
